# opec

./: .gitignore  README.md  playground.py  pyproject.toml  requirements.txt  simple_plotter_zmq.py
.github/workflows/: python-app.yml
example_python_client/: test_app.py
opec/: __init__.py  __main__.py  circular_buffer.py  client.py  collector.py  collector_interface.py  continuous_data.py  messages.py
openephys_client/: __init__.py  circular_buffer.py  client.py  collector.py  connection.py  events.py  messages.py
opez/: __main__.py  circular_buffer.py  client.py  collector.py  collector_interface.py  connection.py  server.py  simple_plotter.py
opez/tests/: test_collector.py
test/: test_circularbuffer.py  test_collector.py
