[project]
name = "opez"
version = "0.1.0"
description = "A Python client for the OpenEphys ZMQ Interface"
license = { text = "GPLv3" }
authors = [
  { name = "Joscha Schmiedt", email = "joscha@schmiedt.dev" },
  { name = "Andras Szell", email = "szell.andris@gmail.com" },
]
maintainers = [{ name = "Joscha Schmiedt", email = "joscha@schmiedt.dev" }]
dependencies = ["numpy>=1.26,<2.0", "pyzmq>=26.0,<27"]
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: GPLv3 License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["OpenEphys", "ZMQ", "client", "online analysis"]
